# zkvm-gadget

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
blueprints/incredible-squaring/: Cargo.toml  README.md  blueprint.json
blueprints/incredible-squaring/contracts/: foundry.toml  remappings.txt
blueprints/incredible-squaring/contracts/src/: IncredibleSquaringBlueprint.sol
blueprints/incredible-squaring/methods/guest/src/: main.rs
blueprints/incredible-squaring/src/: eigenlayer.rs  lib.rs  main.rs
blueprints/zkvm/: Cargo.toml  README.md  blueprint.json  deploy.ts
blueprints/zkvm/contracts/: remappings.txt
blueprints/zkvm/contracts/src/: IZkvmTaskManager.sol  ZkvmBlueprint.sol  ZkvmServiceManager.sol  ZkvmSquaringTaskManager.sol
blueprints/zkvm/src/: eigenlayer.rs  lib.rs  main.rs
macros/blueprint-proc-macro-core/: Cargo.toml
macros/blueprint-proc-macro/src/tangle/: event_listener.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
sdk/src/events_watcher/: substrate.rs
sdk/src/keystore/: mod.rs
sdk/src/keystore/backend/: fs.rs
