[package]
name = "zkvm-blueprint"
version = "0.1.0"
description = "A Simple Blueprint to demo how blueprints work on Tangle Network"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "zkvm-gadget"
path = "./src/main.rs"
required-features = ["default"]

[dependencies]
eigensdk-rs = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
gadget-sdk = { workspace = true, features = ["std"] }
color-eyre = { workspace = true }
lock_api = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sp-core = { version = "34.0.0" }

subxt = { workspace = true, features = ["substrate-compat"] }
subxt-core = { workspace = true, features = ["substrate-compat"] }
subxt-signer = { workspace = true, features = ["sr25519", "subxt", "std"] }
tracing-subscriber = { workspace = true, features = ["parking_lot", "env-filter"] }
alloy-contract = { workspace = true }
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-transport = { workspace = true }
parking_lot = { workspace = true }
multiaddr = { workspace = true }
libp2p = { workspace = true }
ed25519-zebra = { workspace = true, features = ["pkcs8", "default", "der", "std", "serde" ,"pem"] }
backon = { workspace = true }
env_logger = "0.11.5"

methods = { path = "./methods" }
risc0-zkvm = { version = "1.0.5", features = ["prove"] }
risc0-groth16 = { version = "1.0.5", features = ["prove"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum.git", tag = "v1.0.0" }

structopt = { workspace = true }
url = "2.5.2"
log = { workspace = true }

[build-dependencies]
blueprint-metadata = { workspace = true }

[features]
default = ["std"]
std = []
